Update Unit Test Host
Set the unit testing host 😅

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
+xcshareddata
 xcuserdata
 DerivedData
 Carthage
 Cartfile.resolved
-
-GitHub\.xcodeproj/project\.xcworkspace/
+project\.xcworkspace/
