--- a/GitHub.xcodeproj/xcshareddata/xcschemes/GitHub iOS.xcscheme
+++ b/GitHub.xcodeproj/xcshareddata/xcschemes/GitHub iOS.xcscheme
@@ -22,10 +22,10 @@
          </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "YES"
+            buildForRunning = "NO"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "F9401CB11B807423003FFD42"
