--- a/UnitTests/Resources/MockRequestMap.plist
+++ b/UnitTests/Resources/MockRequestMap.plist
@@ -8,5 +8,7 @@
 	<string>login_sample</string>
 	<key>https://api.github.com/users/octocat/received_events</key>
 	<string>events_sample</string>
+	<key>https://api.github.com/repos/octocat/Hello-World</key>
+	<string>repo_sample</string>
 </dict>
 </plist>
