--- a/UnitTests/Resources/MockRequestMap.plist
+++ b/UnitTests/Resources/MockRequestMap.plist
@@ -2,10 +2,28 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>https://api.github.com/user</key>
-	<string>user_sample</string>
-	<key>https://api.github.com/authorizations/clients/12345/{date}</key>
+	<key>local://api.github.com/authorizations/clients/REPLACE_GITHUB_CLIENT_ID/1564582342.70513</key>
 	<string>login_sample</string>
+	<key>authorizations</key>
+	<dict>
+		<key>PUT</key>
+		<dict>
+			<key>code</key>
+			<integer>202</integer>
+			<key>data</key>
+			<string>login_sample</string>
+		</dict>
+	</dict>
+	<key>user</key>
+	<dict>
+		<key>GET</key>
+		<dict>
+			<key>code</key>
+			<integer>202</integer>
+			<key>data</key>
+			<string>user_sample</string>
+		</dict>
+	</dict>
 	<key>https://api.github.com/users/octocat/received_events</key>
 	<string>events_sample</string>
 	<key>https://api.github.com/repos/octocat/Hello-World</key>
