--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,6 +12,6 @@ jobs:
     - name: Build
       run: xcodebuild -project GitHub.xcodeproj -scheme iOS -sdk iphonesimulator build
     - name: Run tests
-      run: xcodebuild -project GitHub.xcodeproj -scheme iOS -sdk iphonesimulator test
+      run: xcodebuild -project GitHub.xcodeproj -scheme iOS -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 8" test
     - name: Run a one-line script
       run: echo Hello, world!
